--- a/src/styles/calculator.css
+++ b/src/styles/calculator.css
@@ -5,17 +5,18 @@
 }
 
 .range-slider {
-  width: 100%;
+  width: 166px;
   height: 2px;
   background: #007AFF40;
   appearance: none;
   margin-top: 10px;
+  border-radius: 37px;
 }
 
 .range-slider::-webkit-slider-thumb {
   appearance: none;
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   background: #007AFF;
   border-radius: 50%;
   cursor: pointer;
@@ -31,6 +32,12 @@
   transition: all 0.3s ease-in-out;
 }
 .box_shadow{
-    box-shadow: 0px 0px 40px 0px #A2A2A240;
+   box-shadow: 0px 0px 40px 0px #A2A2A240;
+
+}
+
+.letter_spacing{
+    letter-spacing: 1px !important;
+    font-weight: 800;
 
 }
